# vaultnote

./: .env.example  .envrc  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: .pre-commit-config.yaml  create_db.py  main.py
app/db/: base.py  init_db.py
app/models/: __init__.py  note.py  note_tag.py  tag.py  user.py
